--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,10 @@ on:
       - net5
 
 jobs:
+  context:
+    runs-on: ubuntu-20.04
+    steps:
+      - run: echo '${{ toJSON(github) }}'
   build:
     strategy:
       matrix:
