--- a/.github/workflows/test-reporter.yml
+++ b/.github/workflows/test-reporter.yml
@@ -13,4 +13,4 @@ jobs:
     #     os: ['windows-2019', 'ubuntu-20.04']
     runs-on: 'ubuntu-20.04'
     steps:
-    - run: echo ${{ toJSON(github) }}
+    - run: echo '${{ toJSON(github) }}'
