Always upload test results

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,15 +48,7 @@ jobs:
 
     - name: Upload test results
       uses: actions/upload-artifact@v2
+      if: success() || failure()
       with:
         name: test-results-${{ matrix.os }}
         path: src/**/TestResults/*.trx
-
-    # - name: Create test report
-    #   if: failure()
-    #   uses: dorny/test-reporter@v1
-    #   with:
-    #     name: Test results (${{ matrix.os }})
-    #     path: src/**/TestResults/*.trx
-    #     reporter: dotnet-trx
-    #     list-tests: failed
