--- a/.github/workflows/test-reporter.yml
+++ b/.github/workflows/test-reporter.yml
@@ -15,6 +15,6 @@ jobs:
       with:
         artifact: /test-results-(.*)/
         name: Test Report $1
-        path: '**/TestResults/*.trx'
+        path: '**/*.trx'
         reporter: dotnet-trx
         list-tests: failed
