--- a/.github/workflows/test-reporter.yml
+++ b/.github/workflows/test-reporter.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: 'ubuntu-20.04'
     steps:
     - run: echo '${{ toJSON(github) }}'
-    - uses: dorny/test-reporter@artifacts-support
+    - uses: dorny/test-reporter@v1
       with:
         artifact: /test-results-(.*)/
         name: Test Report $1
